# NystromKoopman

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Alanine Dipeptide.ipynb  BigProteins.ipynb  L63 Timings.ipynb  L63 sKAF Comparison.ipynb  experiment_helpers.py
nyskoop/data/: DESRES_proteins.py  get_alanine_dataset.py  logistic_map.py  lorenz.py  mullerbrown.py
nyskoop/estimators/: __init__.py  base_estimator.py  conjgrad.py  estimator_utils.py  nys_krr.py  nys_pcr.py  nys_rrr.py  streaming_kaf.py
